# bookrat

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: bookmark.rs  main.rs  regex_patterns.rs
