[package]
name = "bookrat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI EPUB reader application"

[dependencies]
ratatui = { version = "0.27.0", features = ["crossterm"] }
crossterm = "0.27.0"
epub = "2.0.0"
regex = "1.10.5"
simplelog = "0.12.2"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
textwrap = "0.16"
anyhow = "1.0.79"
html2text = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10.0"
